Update GPU Container

--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,8 +1,9 @@
-ARG NVIDIA_IMAGE=nvcr.io/nvidia/tensorflow:21.05-tf2-py3
+ARG NVIDIA_IMAGE=nvcr.io/nvidia/cuda:12.2.0-devel-ubuntu20.04
 FROM $NVIDIA_IMAGE
 
-LABEL org.opencontainers.image.source https://github.com/MaastrichtU-IDS/code-server
-
+LABEL org.opencontainers.image.source https://github.com/charitarthchugh/code-server
+RUN apt update && apt upgrade -y
+RUN apt install curl -y
 RUN curl -fsSL https://code-server.dev/install.sh | sh
 
 WORKDIR /root
